[package]
name = "keygen"
version = "0.0.4"
edition = "2021"
description = "Generates random passwords and keys."
categories = ["command-line-utilities"]

[dependencies]
hex = "0.4.3"
clap = { version = "4.5.1", features = ["derive", "std", "help", "usage", "suggestions"], default-features = false }
getrandom = "0.2.10"
ring = "0.16.20"
zeroize = "1.6.0"
lazy_static = "1.4.0"
tiny-keccak =  { version = "2.0.2", features = ["sha3"] }
thiserror = "1.0.57"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true
strip = true
panic = "abort"

[features]
color = ["clap/color"]
